Actualización de comités

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 							</div><!--//info-->
 						</div><!--//card-body-->
 						<div class="card-footer text-center">
-							<a href="#" class="btn btn-primary disabled">Guía próximamente</a>
+							<a href="assets/files/Prensa - Oficial.pdf"class="btn btn-primary enabled">Descarga Aquí</a>
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
@@ -303,12 +303,12 @@
 							<div class="info p-3">
 								<div class="price-figure text-center"><span class="number">20 parejas</span></div>
 								<div class="desc px-3">
-									El tema y la guía de estudios serán publicadas en las próximas semanas. 
+									Tema: Prevención del uso de armas no convencionales en territorios disputados. 
 								</div>
 							</div><!--//info-->
 						</div><!--//card-body-->
 						<div class="card-footer text-center">
-							<a href="#" class="btn btn-primary disabled">Guía próximamente</a>
+							<a href="assets/files/DISEC - Oficial.pdf" class="btn btn-primary enabled">Descarga Aquí</a>
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
@@ -326,7 +326,7 @@
 							</div><!--//info-->
 						</div><!--//card-body-->
 						<div class="card-footer text-center">
-							<a href="#" class="btn btn-primary disabled">Guía próximamente</a>
+							<a href="assets/files/Crisis - Oficial.pdf" class="btn btn-primary enabled">Descarga Aquí</a>
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
@@ -339,12 +339,12 @@
 							<div class="info p-3">
 								<div class="price-figure text-center"><span class="number">36 spots</span></div>
 								<div class="desc px-3">
-									Este comité será realizado bajo las reglas de SIMOEA, la conferencia sobre la Organización de Naciones Unidas realizada por el Club Consilium de la USIL. 
+									Este comité será realizado bajo las reglas de SIMOEA, la conferencia sobre la Organización de Naciones Unidas realizada por el Club Consilium de la USIL. Tema: Implementación de nuevas tecnologías para reducir el narcotrafico
 								</div>
 							</div><!--//info-->
 						</div><!--//card-body-->
 						<div class="card-footer text-center">
-							<a href="#" class="btn btn-primary disabled">Guía próximamente</a>
+							<a href="assets/files/CICAD - Oficial.pdf" class="btn btn-primary enabled">Descarga Aquí</a>
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
@@ -357,12 +357,12 @@
 							<div class="info p-3">
 								<div class="price-figure text-center"><span class="number">27 spots</span></div>
 								<div class="desc px-3">
-									El tema y la guía de estudios serán publicadas en las próximas semanas.  
+									Tema: Democracy and the rule of law in member countries.  
 								</div>
 							</div><!--//info-->
 						</div><!--//card-body-->
 						<div class="card-footer text-center">
-							<a href="#" class="btn btn-primary disabled">Guía próximamente</a>
+							<a href="assets/files/UE - Oficial.pdf" class="btn btn-primary enabled">Descarga Aquí</a>
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
